Disable creating service users in domains (#5076)
(cherry picked from commit b5ef44e8073cb697624eae3ede6ed7146d4a323f)

# Conflicts:
#	gravitee-am-management-api/gravitee-am-management-api-rest/src/test/java/io/gravitee/am/management/handlers/management/api/resources/UsersResourceTest.java